# gamma-termul

./: .gitignore
docs/: README.md  alternatives.md  architecture.md  plan.md  portable-config.md  pty-backend.md  session-manager.md  shortcut-rules.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  paths.rs  session.rs
