[package]
name = "gamma-termul"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
base64 = "0.22"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
